fix(register): fix loader jumps (#1432)

--- a/pages/setup/phrase/Phrase.less
+++ b/pages/setup/phrase/Phrase.less
@@ -8,7 +8,6 @@
   .phrase-body {
     min-width: 250px;
     align-self: center;
-    margin-bottom: 25vh;
 
     .title {
       margin-top: 0;
